# E-Commerce-API

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.app.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-ghcr.yml
.postman/: resources.yaml
alembic/: env.py
alembic/versions/: 3e4cdc71234d_init_ecommerce_tables.py  b2f8a91c4e2f_stripe_payment_fields_and_webhook_events.py
docs/: CH14_POSTGRES_TESTS.md  CODE_QUIZ.md  MICROSERVICES_MIGRATION_GUIDE.md  PROJECT_DIAGRAM.md  STEP_BY_STEP.md  STRIPE_INTEGRATION_GUIDE.md
postman/collections/ecommerce api/.resources/: definition.yaml
postman/collections/ecommerce api/Admin/: Admin Health.request.yaml  Create Product.request.yaml  Delete Product.request.yaml  Update Product.request.yaml
postman/environments/: E-Commerce API - Local.yaml
scripts/: install-linux.sh  start.sh  stop.sh
src/api/: dependencies.py  main.py
src/api/v1/: router.py
src/api/v1/routers/: admin.py  (+5 more)
src/application/: auth_service.py  cart_service.py  checkout_service.py  product_service.py  stripe_webhook_service.py
src/domain/: __init__.py  checkout_statuses.py  ecommerce_rules.py
src/infrastructure/: debug_log.py
src/infrastructure/config/: settings.py
src/infrastructure/db/: session.py
src/infrastructure/security/: jwt_tokens.py  password.py
src/infrastructure/stripe/: __init__.py  client.py
tests/: conftest.py  test_auth.py  test_checkout_and_webhook_api.py  test_checkout_service.py  test_checkout_statuses.py  test_domain_rules.py  test_health.py  test_info.py
(+28 files in other folders)
